--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/016/a/qmm016.a.style.css
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/016/a/qmm016.a.style.css
@@ -25,10 +25,20 @@
 .large-caret::after{
     font-size: 3em;
     color: #97D155 !important;
+    margin-top: 4px
 }
 .custom-fixed-table-body .nts-fixed-table{
     display: inline-block;
 }
 .E5_1 .nts-fixed-body-container {
     overflow-x: hidden;
+}
+
+.ntsHelpButton {
+	position: absolute;
+	padding-left: 3px;
+	margin-top: -7px;
+}
+.hover { 
+	background-color: #C5F1F7; 
 }
