QMM017 update coding g

--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/017/h/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/017/h/index.xhtml
@@ -56,9 +56,9 @@
             <div style="margin-top: 20px; min-width: 550px">
                 <div style="width: 130px; margin-left: 150px;"
                      data-bind="ntsFormLabel: { required: true }">#{i18n.getText('QMM017_17')}</div>
-                <div style = "display: inline-block" data-bind = "text: displayCalculationMethod"></div>
+                <div style = "display: inline-block" data-bind = "text: displaySettingMethod"></div>
             </div>
-            <div style="margin-top: 20px; min-width: 550px">
+            <div data-bind="if: settingMethod() == 0" style="margin-top: 20px; min-width: 550px">
                 <div style="width: 130px; margin-left: 180px;"
                      data-bind="ntsFormLabel: { required: true }">#{i18n.getText('QMM017_21')}</div>
                 <div style="margin-left: 200px;" tabindex="3" class="cf" data-bind="ntsSwitchButton: {
@@ -70,7 +70,7 @@
                     required: true}">
                 </div>
             </div>
-            <div style="margin-top: 20px; min-width: 550px">
+            <div data-bind="if: settingMethod() == 0" style="margin-top: 20px; min-width: 550px">
                 <div style="width: 130px; margin-left: 180px;"
                      data-bind="ntsFormLabel: { required: true }">#{i18n.getText('QMM017_23')}</div>
                 <div style="vertical-align: middle" tabindex="4" data-bind="ntsComboBox: {
