qmm017 update coding d, g

--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/017/g/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/017/g/index.xhtml
@@ -77,7 +77,8 @@
                     <div style="margin-top: 10px; min-width: 550px">
                         <div>
                         <textarea style = "height: 100px; width: 595px;" data-bind="ntsMultilineEditor: {
-                        value: formulaContent}"/>
+                            value: formulaContent,
+                            enable: false}"/>
                         </div>
                     </div>
                 </div>
