--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmf/004/x/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmf/004/x/index.xhtml
@@ -16,7 +16,7 @@
 
 		<ui:define name="content">
 			<div id="functions-area">
-				
+				<button id="print-button" data-bind="click: exportExcel">#{i18n.getText('KMF004_155')}</button>
 			</div>
 			<div id="contents-area">
 				<table>
