--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/j/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/j/index.xhtml
@@ -6,7 +6,7 @@
 <body>
 <ui:composition template="../../../../master/dialog.xhtml">
     <ui:define name="htmlHead">
-        <script>var dialogSize = {width: 500, height:480 };</script>
+        <script>var dialogSize = {width: 576, height:480 };</script>
         <com:scriptfile set="IGNITE"/>
         <com:scriptfile path="../share/model.js"/>
         <com:scriptfile path="qmm020.j.vm.js"/>
@@ -80,8 +80,8 @@
                         </div>
                         <br/>
                         <div data-bind="if: modeScreen() == nts.uk.pr.view.qmm020.j.viewmodel.MODE_SCREEN.MODE_TWO">
-                        <span style="margin: 10px 10px 10px 20px;" id="J1_10"
-                              class="label warning">#{i18n.getText('QMM020_61')}</span>
+                        <span style="margin: 10px 10px 10px 20px; width: 290px;"
+                              class="label warning J1_10">#{i18n.getText('QMM020_61')}</span>
                         </div>
 
                         <div class="cell" style="margin-top: 10px;" tabIndex="-1"
@@ -127,8 +127,8 @@
                         </div>
                         <br/>
                         <div data-bind="if: modeScreen() == nts.uk.pr.view.qmm020.j.viewmodel.MODE_SCREEN.MODE_TWO" class ="cell valign-top">
-                        <span style="margin: 10px 10px 10px 55px;" id="J1_10"
-                              class="label warning">#{i18n.getText('QMM020_61')}</span>
+                        <span style="margin: 10px 10px 10px 55px; width: 290px;"
+                              class="label warning J1_10">#{i18n.getText('QMM020_61')}</span>
                         </div>
                     </div>
                 </div>
