--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kdr/001/a/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kdr/001/a/index.xhtml
@@ -52,7 +52,7 @@
 							</td>
 							<td>
 								<!-- A3_2 -->
-								<div tabindex="3" style="width: 162px; "
+								<div id="A3_2"  tabindex="3" style="width: 162px; "
 									data-bind="ntsDatePicker: {
 									required: true,
 									showJumpButtons: true,
@@ -65,7 +65,7 @@
 									style="margin-top: 11px; width: 30px;">
 									<label style="margin: 6px">～</label>
 								</div> <!-- A3_4 -->
-								<div tabindex="4" style="width: 162px;"
+								<div id="A3_4" tabindex="4" style="width: 162px;"
 									data-bind="ntsDatePicker: {
 									required: true,
 									showJumpButtons: true,
