QMM020 fix change 126510

--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/c/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/c/index.xhtml
@@ -17,7 +17,7 @@
 
     </div>
     <div style="margin-top: 30px;" class="contents-area fixed-flex-layout">
-        <div class="fixed-flex-layout-left" style="margin-left: 25px">
+        <div class="fixed-flex-layout-left" style="margin-left: 25px;margin-right: 0px !important;">
             <div >
                 <i id="img-calendar" class="image image-calendar"/>
             </div>
